--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,44 +3,36 @@
         relink: true
         path: alacritty
         create: true
-- link:
     ~/.bashrc:
         force: true
         relink: true
         path: bash/.bashrc
         create: true
-- link:
     ~/.gitconfig:
         relink: true
         path: git/.gitconfig
         create: true
-- link:
     ~/.tmux.conf:
         relink: true
         path: tmux/.tmux.conf
         create: true
-- link:
     ~/.config/nvim:
         relink: true
         path: nvim
         create: true
-- link:
     ~/scripts:
         relink: true
         path: scripts
         create: true
-- link:
     ~/.oh-my-zsh/themes/pietietjie.zsh-theme:
         relink: true
         path: zsh/pietietjie.zsh-theme
         create: true
-- link:
     ~/.zshrc:
         force: true
         relink: true
         path: zsh/.zshrc
         create: true
-- link:
     /usr/share/libalpm/hooks:
         force: true
         relink: true
@@ -48,6 +40,18 @@
         path: pacman/hooks
         create: true
 - link:
+    /etc/ignore.txt:
+        force: true
+        relink: true
+        if: "[[ \"$EUID\" -eq 0 ]]"
+        path: pacman/ignore.txt
+        create: true
+    /usr/local/bin/update_pkglist_hook.sh:
+        force: true
+        relink: true
+        if: "[[ \"$EUID\" -eq 0 ]]"
+        path: pacman/update_pkglist_hook.sh
+        create: true
     /etc/pkglist.txt:
         force: true
         relink: true
