--- a/install-ubuntu.conf.yaml
+++ b/install-ubuntu.conf.yaml
@@ -24,5 +24,6 @@
 # PHP first add ppa then all the different versions and plugins
 - aptget:
     php8.2: ppa:ondrej/php
+- aptget: [ php8.4-zip, php8.4-curl, php8.4-gd, php8.4-xml, php8.4-sqlite3, php8.4-mysql, php8.4-mbstring, php8.4-xdebug ]
 - aptget: [ php8.2-zip, php8.2-curl, php8.2-gd, php8.2-xml, php8.2-sqlite3, php8.2-mysql, php8.2-mbstring, php8.2-xdebug ]
 - aptget: [ php7.4, php7.4-zip, php7.4-curl, php7.4-gd, php7.4-xml, php7.4-sqlite3, php7.4-mysql, php7.4-mbstring, php7.4-xdebug ]
